k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: wanderlust-ingress
  namespace: wanderlust

spec:
  ingressClassName: nginx

  rules:
    - host: wanderlust.local

      http:
        paths:

          # Backend routes
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 5000

          # Frontend routes
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80
